# sokconfig

./: .gitignore  README.md  pyproject.toml
sokconfig/: settings.py  values.py
