[tool.poetry]
name = "sokconfig"
version = "0.1.0"
description = "A simple config parser for python"
authors = ["sokripon <sokripon@gmail.com>"]
readme = "README.md"
repository = "https://github.com/sokripon/sokconfig"
homepage = "https://github.com/sokripon/sokconfig"
packages = [{ include = "sokconfig" }]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140
target-version = ['py310']
